# unitree_ros

./: .gitignore  .gitmodules  README.md
examples/: CMakeLists.txt  package.xml
examples/launch/: laikago_move.launch
examples/src/: move_publisher.cpp
robots/aliengo_description/: CMakeLists.txt  package.xml
robots/aliengo_description/config/: robot_control.yaml
robots/aliengo_description/launch/: aliengo_rviz.launch  check_joint.rviz
robots/aliengo_description/urdf/: aliengo.urdf
robots/aliengo_description/xacro/: aliengo.urdf  const.xacro  leg.xacro  robot.xacro
robots/b1_description/: CMakeLists.txt  package.xml
robots/b1_description/config/: robot_control.yaml
robots/b1_description/launch/: b1_rviz.launch  check_joint.rviz
robots/b1_description/meshes/: calf.dae  calfb.dae  hip.dae  hipb.dae  thigh.dae  thigh_mirror.dae  thigh_mirrorb.dae  thighb.dae
robots/b1_description/xacro/: b1.urdf  b1.xacro  const.xacro  gazebo.xacro  leg.xacro  robot.xacro
robots/b1z1_description/: CMakeLists.txt  package.xml
robots/b1z1_description/config/: robot_control.yaml
robots/b1z1_description/launch/: b1z1_gazebo.launch  b1z1_rviz.launch
robots/b1z1_description/xacro/: const.xacro  gazebo.xacro  robot.xacro
robots/b2w_description/: CMakeLists.txt  README.md  package.xml
robots/b2w_description/config/: b2w.rviz  joint_names_b2w_description.yaml
robots/b2w_description/launch/: display.launch  gazebo.launch
robots/b2w_description/meshes/: FL_foot.dae  FL_hip.dae  FR_foot.dae  RL_calf.dae  RL_foot.dae  RL_hip.dae  RL_thigh.dae  RR_foot.dae  calf_mirror.dae
robots/b2w_description/urdf/: b2w_description.urdf
robots/b2w_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro
robots/g1_description/: CMakeLists.txt  README.md  dex3_1_l.urdf  dex3_1_r.urdf  g1.urdf  g1.xml  g1_23dof.urdf  g1_23dof.xml  g1_23dof_mode_10.urdf  g1_23dof_rev_1_0.urdf  g1_23dof_rev_1_0.xml  g1_29dof.urdf  g1_29dof.xml  g1_29dof_lock_waist.urdf  g1_29dof_lock_waist.xml  g1_29dof_lock_waist_rev_1_0.urdf  g1_29dof_lock_waist_rev_1_0.xml  g1_29dof_lock_waist_with_hand_rev_1_0.urdf  g1_29dof_lock_waist_with_hand_rev_1_0.xml  g1_29dof_mode_11.urdf  g1_29dof_mode_12.urdf  g1_29dof_mode_13.urdf  g1_29dof_mode_14.urdf  g1_29dof_mode_15.urdf  g1_29dof_mode_15_with_dex1_1.urdf  g1_29dof_mode_16.urdf  g1_29dof_rev_1_0.urdf  g1_29dof_rev_1_0.xml  g1_29dof_rev_1_0_with_inspire_hand_DFQ.urdf  g1_29dof_rev_1_0_with_inspire_hand_FTP.urdf  g1_29dof_with_hand.urdf  g1_29dof_with_hand.xml  g1_29dof_with_hand_rev_1_0.urdf  g1_29dof_with_hand_rev_1_0.xml  g1_comp.urdf  g1_dual_arm.urdf  g1_dual_arm.xml  g1_joint_index_dds.md  merge_g1_29dof_and_inspire_hand.ipynb  package.xml  (+1 more)
robots/g1_description/config/: robot_control.yaml
robots/g1_description/inspire_hand/: DFQ_left_hand.urdf  DFQ_right_hand.urdf  FTP_left_hand.urdf  FTP_right_hand.urdf  config.yaml
robots/g1_description/launch/: display.launch  display.launch.xml  display.rviz  gazebo.launch
robots/g1_description/meshes/: Dex1_base_link.STL  Dex1_finger_link_1.STL  Dex1_finger_link_2.STL  backpack_link.STL  dex1_col_1.stl  dex1_col_2.stl  head_link.STL  head_servo_link.STL  left_base_link.STL  left_hand_one_link.STL  left_hand_palm_link.STL  left_hand_six_link.STL  left_hand_three_link.STL  left_hand_thumb_0_link.STL  left_hand_thumb_2_link.STL  left_index_1.STL  left_index_2.STL  left_index_force_sensor_2.STL  left_little_1.STL  left_little_2.STL  left_little_force_sensor_2.STL  left_middle_1.STL  left_middle_2.STL  left_middle_force_sensor_2.STL  left_middle_force_sensor_3.STL  left_palm_force_sensor.STL  left_ring_1.STL  left_ring_2.STL  left_thumb_1.STL  left_thumb_2.STL  left_thumb_3.STL  left_thumb_4.STL  left_thumb_force_sensor_2.STL  left_thumb_swing.STL  left_wrist_pitch_link_5010.STL  right_base_link.STL  right_hand_four_link.STL  right_hand_middle_0_link.STL  right_hand_palm_link.STL  right_hand_six_link.STL  (+24 more)
robots/g1_description/xacro/: arm.xacro  arm_transmission.xacro  const.xacro  gazebo.xacro  leg.xacro  leg_transmission.xacro  robot.xacro
robots/go1_description/: CMakeLists.txt  package.xml
robots/go1_description/config/: robot_control.yaml
robots/go1_description/launch/: check_joint.rviz  go1_rviz.launch
robots/go1_description/urdf/: go1.urdf
robots/go1_description/xacro/: const.xacro  depthCamera.xacro  gazebo.xacro  (+3 more)
robots/go2_description/: CMakeLists.txt  README.md  package.xml
robots/go2w_description/: CMakeLists.txt  package.xml
robots/z1_description/: CMakeLists.txt  package.xml
unitree_controller/: .~lock.pinocchio_py_setup.docx#  CMakeLists.txt  package.xml  pinocchio_py_setup.docx
unitree_controller/include/: a1body.h  body.h  functions.h
unitree_controller/launch/: own_ctrl.launch  set_ctrl.launch
unitree_controller/src/: a1body.cpp  body.cpp  functions.cpp  model_test_FK.cpp  move_publisher.cpp  pinocchio_test.cpp  position_exe.cpp  servo.cpp  torque_exe.cpp  velocity_exe.cpp
unitree_gazebo/: CMakeLists.txt  package.xml
unitree_gazebo/launch/: normal.launch  simulation.launch  z1.launch  z1_empty.launch  z1_spawn.launch
unitree_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
unitree_gazebo/worlds/: earth.world  stairs.world
unitree_legged_control/: CMakeLists.txt  package.xml  unitree_controller_plugins.xml
unitree_legged_control/include/: joint_controller.h  unitree_joint_control_tool.h
unitree_legged_control/src/: joint_controller.cpp  unitree_joint_control_tool.cpp
unitree_legged_msgs/: CMakeLists.txt  package.xml
unitree_legged_msgs/msg/: HighCmd.msg  HighState.msg  IMU.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg
unitree_legged_real/: CMakeLists.txt  ipconfig.sh  package.xml
unitree_legged_real/include/: convert.h
unitree_legged_real/launch/: real.launch
unitree_ros/: CMakeLists.txt  package.xml
unitree_worlds/: CMakeLists.txt  earth.world  package.xml  space.world  stairs.world
z1_controller/: CMakeLists.txt  package.xml
z1_controller/include/: unitreeArm.h
z1_controller/src/: basic.cpp  unitreeArm.cpp
(+518 files in other folders)
