<?xml version="1.0"?>
<package format="2">
    <name>unitree_worlds</name>
    <version>0.0.1</version>
    <description>The worlds package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
