<?xml version="1.0"?>
<package format="2">
    <name>g1_description</name>
    <version>0.0.0</version>
    <description>The g1_description package</description>

    <maintainer email="g1@unitree.cc">unitree</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
