cmake_minimum_required(VERSION 2.8.3)

project(go2_description)

find_package(catkin REQUIRED
	velodyne_description
)
catkin_package()

find_package(roslaunch)

foreach(dir config launch meshes urdf)
	install(DIRECTORY ${dir}/
		DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
endforeach(dir)
