<?xml version="1.0"?>
<package format="2">
  <name>z1_description</name>
  <version>0.0.0</version>
  <description>The z1_description package</description>

  <maintainer email="laikago@unitree.cc">unitree</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
